--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
           </button>
         </div>
 
-        <!-- Vimeo Highlight -->
+        <!-- Cloudflare Video Highlight -->
         <div class="mb-10">
           <div class="bg-neutral-grey rounded-2xl overflow-hidden border border-neutral-grey">
             <div class="p-6 md:p-8 flex flex-col md:flex-row md:items-end md:justify-between gap-6">
@@ -399,7 +399,7 @@
                   Quick Highlight
                 </p>
                 <h3 class="text-2xl md:text-3xl font-bold">
-                  A 30-Second Look at Our Style
+                  A 60-Second Look at Our Style
                 </h3>
                 <p class="text-text-sub text-sm font-display mt-2">
                   Real moments, timeless edits, story-first coverage.
@@ -407,20 +407,20 @@
               </div>
             </div>
 
-            <div class="bg-black">
-              <div style="padding:56.15% 0 0 0;position:relative;">
-                <iframe
-                  src="https://player.vimeo.com/video/1157787782?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479"
-                  frameborder="0"
-                  allow="autoplay; fullscreen; picture-in-picture; clipboard-write; encrypted-media; web-share"
-                  referrerpolicy="strict-origin-when-cross-origin"
-                  style="position:absolute;top:0;left:0;width:100%;height:100%;"
-                  title="Mack Media | Wedding Videography At A Glance"
-                ></iframe>
-              </div>
-            </div>
-          </div>
-        </div>
+<div class="bg-black">
+  <div class="relative w-full overflow-hidden" style="padding-top:56.25%">
+    <iframe
+      src="https://customer-2orh8t6ylup9dbxv.cloudflarestream.com/75ff17e30573c3fb61258ee5fe99a0d9/iframe?controls=false&startTime=0&primaryColor=%23c6a15d"
+      loading="lazy"
+      class="absolute inset-0 w-full h-full"
+      style="border: none;"
+      allow="accelerometer; gyroscope; encrypted-media; picture-in-picture;"
+      allowfullscreen
+      title="Mack Media | Wedding Videography At A Glance"
+    ></iframe>
+  </div>
+</div>
+
 
         <!-- Portfolio Grid -->
         <div id="portfolioGrid" class="columns-1 md:columns-2 lg:columns-3 gap-6 space-y-6">
