--- a/index.html
+++ b/index.html
@@ -408,17 +408,15 @@
             </div>
 
 <div class="bg-black">
-  <div class="relative w-full overflow-hidden" style="padding-top:56.25%">
-    <iframe
-      src="https://customer-2orh8t6ylup9dbxv.cloudflarestream.com/75ff17e30573c3fb61258ee5fe99a0d9/iframe?controls=false&startTime=0&primaryColor=%23c6a15d"
-      loading="lazy"
-      class="absolute inset-0 w-full h-full"
-      style="border: none;"
-      allow="accelerometer; gyroscope; encrypted-media; picture-in-picture;"
-      allowfullscreen
-      title="Mack Media | Wedding Videography At A Glance"
-    ></iframe>
-  </div>
+  <div style="position: relative; padding-top: 56.14583333333333%;">
+  <iframe
+    src="https://customer-2orh8t6ylup9dbxv.cloudflarestream.com/75ff17e30573c3fb61258ee5fe99a0d9/iframe?muted=true&autoplay=true&poster=https%3A%2F%2Fcustomer-2orh8t6ylup9dbxv.cloudflarestream.com%2F75ff17e30573c3fb61258ee5fe99a0d9%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D1m5s%26height%3D600&startTime=0%3A00&controls=false&primaryColor=%23c6a15d"
+    loading="lazy"
+    style="border: none; position: absolute; top: 0; left: 0; height: 100%; width: 100%;"
+    allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;"
+    allowfullscreen="true"
+  ></iframe>
+</div>
 </div>
 
 
