Modify video iframe source and structure
Updated video iframe source to remove autoplay and controls.

--- a/index.html
+++ b/index.html
@@ -406,18 +406,20 @@
                 </p>
               </div>
             </div>
-
-<div class="bg-black">
-  <div style="position: relative; padding-top: 56.14583333333333%;">
+            
+<!-- VIDEO WRAP (fix spacing + mobile black bar) -->
+<div class="px-6 pb-6">
+  <div class="relative w-full overflow-hidden rounded-xl bg-black shadow-sm border border-black/10 aspect-video">
   <iframe
-    src="https://customer-2orh8t6ylup9dbxv.cloudflarestream.com/75ff17e30573c3fb61258ee5fe99a0d9/iframe?muted=true&autoplay=true&poster=https%3A%2F%2Fcustomer-2orh8t6ylup9dbxv.cloudflarestream.com%2F75ff17e30573c3fb61258ee5fe99a0d9%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D1m5s%26height%3D600&startTime=0%3A00&controls=false&primaryColor=%23c6a15d"
+    src="https://customer-2orh8t6ylup9dbxv.cloudflarestream.com/75ff17e30573c3fb61258ee5fe99a0d9/iframe?poster=https%3A%2F%2Fcustomer-2orh8t6ylup9dbxv.cloudflarestream.com%2F75ff17e30573c3fb61258ee5fe99a0d9%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D1m5s%26height%3D600&startTime=0%3A00&primaryColor=%23c6a15d"
     loading="lazy"
     style="border: none; position: absolute; top: 0; left: 0; height: 100%; width: 100%;"
     allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;"
     allowfullscreen="true"
   ></iframe>
+  </div>
 </div>
-</div>
+
 
 
         <!-- Portfolio Grid -->
