Update logo size and contact information in index.html

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <img
           src="Mack%20Media%20Logo.jpg"
           alt="Mack Media Logo"
-          class="h-9 w-auto object-contain"
+          class="h-12 w-auto object-contain"
           loading="eager"
         />
         <span class="text-white font-bold text-lg hidden sm:inline">Mack Media</span>
@@ -556,7 +556,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <span class="material-symbols-outlined text-primary text-xl">check_circle</span> Guided family & couple portraits (no awkward posing)
               </li>
               <li class="flex items-center gap-2 text-sm text-text-sub">
-                <span class="material-symbols-outlined text-primary text-xl">check_circle</span> Professionally edited, high-resolution images
+                <span class="material-symbols-outlined text-primary text-xl">check_circle</span> Hundreds of professionally edited, high-resolution images
               </li>
               <li class="flex items-center gap-2 text-sm text-text-sub">
                 <span class="material-symbols-outlined text-primary text-xl">check_circle</span> Private online gallery for easy sharing & downloads
@@ -1074,7 +1074,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <img
           src="Mack%20Media%20Logo.jpg"
           alt="Mack Media Logo"
-          class="h-9 w-auto object-contain"
+          class="h-12 w-auto object-contain"
           loading="eager"
         />
         <span class="text-white font-bold text-lg hidden sm:inline">Mack Media</span>
@@ -1095,17 +1095,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
               </a>
               <a
                 class="size-10 rounded-full border border-white/20 flex items-center justify-center hover:bg-primary hover:border-primary hover:text-black transition-all"
-                href="mailto:hello@mackmedia.co"
+                href="mailto:kage@mackmediaco.com"
                 aria-label="Email Mack Media"
               >
                 <span class="material-symbols-outlined text-xl">mail</span>
-              </a>
-              <a
-                class="size-10 rounded-full border border-white/20 flex items-center justify-center hover:bg-primary hover:border-primary hover:text-black transition-all"
-                href="tel:+13175550123"
-                aria-label="Call Mack Media"
-              >
-                <span class="material-symbols-outlined text-xl">call</span>
               </a>
             </div>
           </div>
@@ -1142,7 +1135,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
               <ul class="space-y-4 text-white/60 text-sm font-display">
                 <li>Indianapolis, IN</li>
                 <li><a class="hover:text-white" href="mailto:hello@mackmedia.co">kage@mackmediaco.com</a></li>
-                <li><a class="hover:text-white" href="tel:+13175550123">(463) 275-6225</a></li>
+                <li><a class="hover:text-white" href="tel:+14632756225">(463) 275-6225</a></li>
               </ul>
             </div>
           </div>
