--- a/index.html
+++ b/index.html
@@ -95,13 +95,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     
     <!-- Header -->
     <header
-      class="fixed top-0 z-50 w-full bg-black border-b border-white/10 px-6 lg:px-20 py-4 flex items-center justify-between"
+      class="fixed top-0 z-50 w-full bg-[#1a1a1a] border-b border-white/10 px-6 lg:px-20 py-4 flex items-center justify-between"
     >
       <div class="flex items-center gap-3">
         <img
           src="Mack%20Media%20Logo.jpg"
           alt="Mack Media Logo"
-          class="h-12 w-auto object-contain"
+          class="h-15 w-auto object-contain"
           loading="eager"
         />
         <span class="text-white font-bold text-lg hidden sm:inline">Mack Media</span>
@@ -1067,14 +1067,14 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     </section>
 
     <!-- Footer -->
-    <footer class="bg-black text-white py-16">
+    <footer class="bg-[#1a1a1a] text-white py-16">
       <div class="max-w-[1200px] mx-auto px-6">
         <div class="flex flex-col md:flex-row justify-between items-start gap-12 mb-16">
           <div>
                     <img
           src="Mack%20Media%20Logo.jpg"
           alt="Mack Media Logo"
-          class="h-12 w-auto object-contain"
+          class="h-15 w-auto object-contain"
           loading="eager"
         />
         <span class="text-white font-bold text-lg hidden sm:inline">Mack Media</span>
