Update background image in index.html

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="absolute inset-0 bg-black/45 z-10"></div>
         <div
           class="w-full h-full bg-cover bg-center"
-          style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuBPmoeLUfCFVGNgTJMAJOn4v7X0eX6vhY6-EpJYAkUIht6T7dRQo7c5jVrVla-D1wuHsWGAj-vm3d9DkHSBQoeIOTfasd426XpxzGyeTtLyflk7LSu-W31B67KCtPIWHOcGlFlAAAIvn0v6z6Gt3wtsb0IvBOlKYq6-Dzo5Oec7Zw3x2XU6-Uplo0Gw3xhqYo-yQW25GGp3TPK_uOA4lHs096OvEWOOxBOqJglM1y95bzXEDyiwsNn9qT9-GaqRnU9xo7irAVpofw");'
+          style='background-image: url("wedding.photography.hero.png");'
           role="img"
           aria-label="Cinematic wedding couple laughing in golden hour"
         ></div>
