--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="absolute inset-0 bg-black/45 z-10"></div>
         <div
           class="w-full h-full bg-cover bg-center"
-          style='background-image: url("wedding.photography.hero.png");'
+          style='background-image: url("wedding.photography.hero.2.png");'
           role="img"
           aria-label="Cinematic wedding couple laughing in golden hour"
         ></div>
