Update text content in index.html for clarity

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           class="h-10 w-auto object-contain"
           loading="eager"
         />
-        <span class="text-white font-bold text-lg hidden sm:inline">Mack Media</span>
+        <span class="text-white font-bold text-sm sm:text-lg">Mack Media</span>
       </div>
 
       <nav class="hidden md:flex items-center gap-10">
@@ -152,7 +152,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- Hero -->
     <section class="relative min-h-screen flex items-center justify-center pt-20 overflow-hidden">
       <div class="absolute inset-0 z-0">
-        <div class="absolute inset-0 bg-black/45 z-10"></div>
+        <div class="absolute inset-0 bg-black/60 z-10"></div>
         <div
           class="w-full h-full bg-cover bg-center"
           style='background-image: url("Firefly.png");'
@@ -214,7 +214,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           </h2>
 
           <p class="text-4xl md:text-5xl font-bold text-text-main">
-            Trusted by Indianapolis Couples Who Trust Mack Media With Their Story
+            Why Indianapolis Couples Choose Mack Media
           </p>
 
           <!-- Rating Row -->
@@ -311,7 +311,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <div class="max-w-[1200px] mx-auto px-6">
         <div class="text-center max-w-3xl mx-auto mb-16">
           <h2 class="text-4xl md:text-5xl font-bold mb-6">
-            Wedding Photography That Feels Like Your Day — Not a Photoshoot
+            One Less Thing to Stress About on Your Wedding Day
           </h2>
           <p class="text-text-sub text-lg font-display">
             Real moments over forced poses — so you actually enjoy your celebration.
@@ -387,7 +387,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="flex flex-col md:flex-row items-end justify-between mb-12 gap-6">
           <div class="max-w-2xl">
             <h2 class="text-4xl md:text-5xl font-bold mb-4">
-              Every wedding is different. Every story deserves to be told honestly.
+              Real Weddings. Real Moments. Real Results.
             </h2>
             <p class="text-text-sub font-display">
               If you're looking for a high-quality, reliable wedding photographer to capture your big day, you're in the right place.
