--- a/index.html
+++ b/index.html
@@ -1052,7 +1052,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
               <div class="p-5 rounded-xl bg-red-50 border border-red-200">
                 <p class="font-bold text-lg text-red-800">Something went wrong</p>
                 <p class="text-red-700 text-sm mt-2 font-display">
-                  Please try again in a moment, or email <span class="font-semibold">hello@mackmedia.co</span>.
+                  Please try again in a moment, or email <span class="font-semibold">kage@mackmediaco.com</span>.
                 </p>
               </div>
             </div>
